--- a/ArogyaProject/.classpath
+++ b/ArogyaProject/.classpath
@@ -17,17 +17,17 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/databaseconnection">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/databaseconnection">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jstl">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jstl">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/servlet">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/servlet">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
